added: definition of XML Acknowledgement
